--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "0.1.1",
     "@heroicons/react": "^1.0.3",
     "date-fns": "^2.23.0",
     "next": "latest",
